--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -1521,11 +1521,33 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="form-group m-form__group row">
+                                <label class="col-lg-3 col-form-label">
+                                    Fecha del Servicio*:
+                                </label>
+                                <div class="input-group col-lg-4">
+                                    <input class="form-control" placeholder="yyyy-mm-dd"
+                                    name="fecha" #fecha="ngModel" [(ngModel)]="retiro.fecha_ejecucion" [markDisabled]="isDisabled"
+                                    ngbDatepicker #d2="ngbDatepicker" (click)="d2.toggle()" required [minDate]="maximo"
+                                    >
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary calendar" 
+                                        style="color: #575962; background-color: white; line-height: initial; margin-left: -1px;"
+                                        (click)="d2.toggle()" type="button">
+                                        <i class="fa fa-calendar" style="width: 1.2rem; height: 1rem; cursor: pointer;"></i>
+                                    </button>
+                                </div>
+                                <section *ngIf="fecha.invalid && fecha.dirty" class="bs">
+                                    <p class="m--font-danger" *ngIf="fecha.hasError('required')">La fecha de retiro es requerida</p>
+                                </section>
+                                </div>
+                            
+                        </div>
                      
                         <div class="form-group m-form__group row">
                             <div class="col-lg-12" >
                                <label class="col-lg-12 col-form-label">
-                                  Descripción:
+                                  Descripción*:
                                 </label><br/>
                                 <input  type="text" class="form-control m-input" placeholder="Desripcion"
                                 [(ngModel)]="retiro.nota"  #descripcion="ngModel"
@@ -1533,7 +1555,109 @@
                                 required> 
                             </div>
                         </div>
-                      
+                        <div *ngIf="retiro.servicio_id == 1">
+                            <hr>
+                            <div class="row" style="margin: 5px">
+                                <div class="col-lg-4">
+                                <span>Datos de la persona que retira:</span>  
+                                </div>
+                                <div class="col-lg-1">
+                                <span class="m-switch m-switch--icon">
+                                    <label>
+                                      <input
+                                        type="checkbox"
+                                        name="select"
+                                        [(ngModel)]="selectUsuarioRetiro"
+                                        #select="ngModel"
+                                      />
+                                      <span></span>
+                                    </label>
+                                  </span>
+                                </div>
+                                <label class="col-lg-4 col-form-label">
+                                    Nuevo usuario / Usuario existente
+                                </label>
+                            </div>
+                            <div class="form-group m-form__group row" *ngIf="selectUsuarioRetiro">
+                                <label class="col-lg-2 col-form-label">
+                                    Usuario*:
+                                </label>
+                                <div class="col-lg-8">
+                                    <div class="m-loader m-loader--primary m-loader--right" *ngIf="!usuarios">
+                                        <input type="text" class="form-control"/>
+                                    </div>
+                                    <app-auto-complete *ngIf="usuarios" placeholder="Seleccione"
+                                                        [ngModel]="usuarioRetirar" #usuario_retiro="ngModel"
+                                                        name="usuario_retiro" required [items]="usuarios"
+                                                        [textField]="'numero_identidad'"
+                                                        textField1="nombre"
+                                                        textField2="apellido"
+                                                        valueField="numero_identidad"
+                                                        buscador="buscar"
+                                                        buscador1="buscar1"
+                                    ></app-auto-complete>
+                                </div>
+                               
+                            </div>
+                            <div class="form-group m-form__group row" *ngIf="!selectUsuarioRetiro">
+                                <label class="col-lg-2 col-form-label" >
+                                    Nombre*:
+                                </label>
+                                <div class="col-lg-3">
+                                    <input type="text" class="form-control m-input" placeholder="Nombre"
+                                           [(ngModel)]="retiro.nombre" #nombre="ngModel" name="nombre"
+                                         required>
+                                         <section *ngIf="nombre.invalid && nombre.dirty" class="bs">
+                                            <p class="m--font-danger" *ngIf="nombre.hasError('required')">El nombre es requerido</p>
+                                        </section>
+                                </div>
+                                <label class="col-lg-2 col-form-label" >
+                                    Apellidos*:
+                                </label>
+                                <div class="col-lg-4">
+                                    <input type="text" class="form-control m-input" placeholder="Apellidos"
+                                           [(ngModel)]="retiro.apellidos" #apellido="ngModel" name="apellido"
+                                         required>
+                                         <section *ngIf="apellido.invalid && apellido.dirty" class="bs">
+                                            <p class="m--font-danger" *ngIf="apellido.hasError('required')">Los apellidos son requerido</p>
+                                        </section>
+                                </div>
+                            </div>
+                            <div class="form-group m-form__group row" *ngIf="!selectUsuarioRetiro">
+                                <label class="col-lg-2 col-form-label" >
+                                    Cédula*:
+                                </label>
+                                <div class="col-lg-3">
+                                    <input type="text" class="form-control m-input" placeholder="Cédula"
+                                           [(ngModel)]="retiro.cedula" #cedula="ngModel" name="cedula"
+                                         required>
+                                         <section *ngIf="cedula.invalid && cedula.dirty" class="bs">
+                                            <p class="m--font-danger" *ngIf="cedula.hasError('required')">La cédula es requerido</p>
+                                        </section>
+                                </div>
+                                <label class="col-lg-2 col-form-label" >
+                                    Teléfono:
+                                </label>
+                                <div class="col-lg-4">
+                                    <input type="text" class="form-control m-input" placeholder="Teléfono"
+                                           [(ngModel)]="retiro.telefono" #telefono="ngModel" name="telefono"
+                                         >
+                                </div>
+                            </div>
+                            <div class="form-group m-form__group row" *ngIf="!selectUsuarioRetiro">
+                                <label class="col-lg-2 col-form-label" >
+                                    Dirección*:
+                                </label>
+                                <div class="col-lg-8">
+                                    <input type="text" class="form-control m-input" placeholder="Dirección"
+                                           [(ngModel)]="retiro.direccion" #direccion="ngModel" name="direccion"
+                                         required>
+                                         <section *ngIf="direccion.invalid && direccion.dirty" class="bs">
+                                            <p class="m--font-danger" *ngIf="direccion.hasError('required')">La dirección es requerido</p>
+                                        </section>
+                                </div>
+                            </div> 
+                            </div>
                     </div>
                     
                     <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit">
